--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <p class="footer">Created with <a href="http://cocos.com/cocoscreator" title="cocos creator">Cocos Creator</a></p>
 
-<script src="src/settings.9f2db.js" charset="utf-8"></script>
-<script src="main.fc29c.js" charset="utf-8"></script>
+<script src="src/settings.13e71.js" charset="utf-8"></script>
+<script src="main.425f0.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
