--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Cocos Creator | Robo</title>
+  <title>Cocos Creator | Last36hOnTheEarth</title>
 
   <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1, minimum-scale=1,maximum-scale=1"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -19,7 +19,7 @@
   <link rel="stylesheet" type="text/css" href="style-desktop.ec961.css"/>
 </head>
 <body>
-<h1 class="header">Robo</h1>
+<h1 class="header">Last36hOnTheEarth</h1>
 
 <div id="GameDiv" style="width:1280px; height: 720px;">
   <canvas id="GameCanvas" width="1280" height="720"></canvas>
@@ -32,8 +32,8 @@
 
 <p class="footer">Created with <a href="http://cocos.com/cocoscreator" title="cocos creator">Cocos Creator</a></p>
 
-<script src="src/settings.13e71.js" charset="utf-8"></script>
-<script src="main.425f0.js" charset="utf-8"></script>
+<script src="src/settings.0aaa4.js" charset="utf-8"></script>
+<script src="main.6e471.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
