--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <p class="footer">Created with <a href="http://cocos.com/cocoscreator" title="cocos creator">Cocos Creator</a></p>
 
-<script src="src/settings.10ecd.js" charset="utf-8"></script>
-<script src="main.f60a3.js" charset="utf-8"></script>
+<script src="src/settings.74478.js" charset="utf-8"></script>
+<script src="main.f41e8.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
