--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <p class="footer">Created with <a href="http://cocos.com/cocoscreator" title="cocos creator">Cocos Creator</a></p>
 
-<script src="src/settings.e91e7.js" charset="utf-8"></script>
-<script src="main.cbab6.js" charset="utf-8"></script>
+<script src="src/settings.025fc.js" charset="utf-8"></script>
+<script src="main.b1fad.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
