--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1 class="header">该网页已经停止维护了哟w 最新的游戏连接是 119.23.189.50:2333</h1>
+    <h1 class="header">该网页已经停止维护了哟w 最新的游戏连接是 36h.site:233</h1>
 
 </body>
 
